--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a class="link header__link" href="#"
-            >Узнать
-            <img class="header__arrow" src="./images/arrow.png" alt="Cтрелка" />
-          </a>
+          <a class="link header__link" href="#">Узнать &rarr; </a>
         </p>
         <div class="header__square-pic rotation"></div>
         <img
@@ -61,8 +58,8 @@
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-          <div class="cards">
-            <div class="cards__item">
+          <ul class="cards">
+            <li class="cards__item">
               <img
                 src="./images/cards-attention.png"
                 class="cards__image"
@@ -73,8 +70,8 @@
                 Глубокие знания возникают, если чередовать сфокусированное и
                 рассеянное мышление.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-recall.png"
                 class="cards__image"
@@ -85,8 +82,8 @@
                 Вспоминайте изученное — это позволит соединить разрозненные
                 порции памяти.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-interliving.png"
                 class="cards__image"
@@ -97,8 +94,8 @@
                 Изучайте несколько навыков одновременно, они обогащают друг
                 друга.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-question.png"
                 class="cards__image"
@@ -109,8 +106,8 @@
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
                 действительно волнует.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-competence.png"
                 class="cards__image"
@@ -121,32 +118,32 @@
                 Повторите про себя, запишите, расскажите другу: вам только
                 кажется, что вы владеете новой темой.
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-          <div class="video__iframes">
-            <iframe
-              class="video__iframe"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="video__iframe"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
+          <ul class="video__iframes">
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </li>
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </li>
+          </ul>
         </section>
         <section class="oakley">
           <article class="two-columns">
@@ -168,15 +165,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="link feynman__text feynman__link"
-            >Подробнее
-            <img class="feynman__arrow" src="./images/arrow.png" alt="Стрелка"
-          /></a>
-          <img
-            class="feynman__image"
-            src="./images/feynman.png"
-            alt="Фото Фейнмана"
-          />
+          <a href="#" class="link feynman__link">Подробнее &rarr; </a>
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -227,17 +216,17 @@
           </ul>
         </section>
         <section class="khan">
-          <article class="khan__container">
+          <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">
+            <blockquote class="khan__quote">
               Страсть и новаторство Сала Хана меняют процесс обучения миллионов
               студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
               всем, кто занимается образованием — так учащиеся повсюду смогут
               получить навыки и знания, которые приносят успех в школе, карьере
               и жизни.
-            </p>
-            <p class="khan__quote-author">Джордж Лукас</p>
+            </blockquote>
+            <h3 class="khan__quote-author">Джордж Лукас</h3>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img
@@ -245,15 +234,9 @@
                 src="./images/khan-book.jpg"
                 alt="Картинка книги"
               />
-              <a href="#" class="khan__buy-link"
-                >Купить книгу
-                <img
-                  class="khan__arrow"
-                  src="./images/arrow.png"
-                  alt="Иконка стрелки"
-              /></a>
+              <a href="#" class="khan__buy-link">Купить книгу &rarr; </a>
             </div>
-          </article>
+          </div>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -331,37 +314,45 @@
           <p class="section-subtitle">
             Больше материалов о техниках и лайфхаках обучения
           </p>
-          <div class="resources__logo-zone">
-            <a class="resources__link" href="#"
-              ><img
-                src="./images/logo/resources-arzamas.svg"
-                class="resources__logo"
-                alt="иконка"
-            /></a>
-            <a class="resources__link" href="#"
-              ><img
-                src="./images/logo/resources-n1.svg"
-                class="resources__logo"
-                alt="иконка"
-            /></a>
-            <a class="resources__link" href="#"
-              ><img
-                src="./images/logo/resources-strelka.svg"
-                class="resources__logo"
-                alt="иконка"
-            /></a>
-            <a class="resources__link" href="#"
-              ><img
-                src="./images/logo/resources-polka.svg"
-                class="resources__logo"
-                alt="иконка"
-            /></a>
-          </div>
+          <ul class="resources__logo-zone">
+            <li>
+              <a class="resources__link" href="#"
+                ><img
+                  src="./images/logo/resources-arzamas.svg"
+                  class="resources__logo"
+                  alt="Иконка Arzamas"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" href="#"
+                ><img
+                  src="./images/logo/resources-n1.svg"
+                  class="resources__logo"
+                  alt="Иконка N + 1"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" href="#"
+                ><img
+                  src="./images/logo/resources-strelka.svg"
+                  class="resources__logo"
+                  alt="Иконка Strelka"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" href="#"
+                ><img
+                  src="./images/logo/resources-polka.svg"
+                  class="resources__logo"
+                  alt="Иконка Полка"
+              /></a>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img
               class="logo"
               src="./images/logo_place_footer.svg"
@@ -369,39 +360,49 @@
             />
             <p class="footer__author">&copy; Максим Есин</p>
           </div>
-          <nav class="footer__column_content_info">
+          <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
           </nav>
-          <div class="footer__column_content_social">
+          <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <a href="#" class="footer__column-link"
-              ><img
-                class="footer__social-icon"
-                src="./images/youtube-icon.svg"
-                alt="Иконка Ютуб"
-              />
-              YouTube</a
-            >
-            <a href="#" class="footer__column-link"
-              ><img
-                class="footer__social-icon"
-                src="./images/vk_color_white.svg"
-                alt="Иконка Вконтакте"
-              />
-              ВКонтакте</a
-            >
-            <a href="#" class="footer__column-link"
-              ><img
-                class="footer__social-icon"
-                src="./images/tiktok-icon.svg"
-                alt="Иконка ТикТок"
-              />
-              TikTok</a
-            >
-          </div>
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="footer__column-link"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/youtube-icon.svg"
+                    alt="Иконка Ютуб"
+                  />
+                  YouTube</a
+                >
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/vk_color_white.svg"
+                    alt="Иконка Вконтакте"
+                  />
+                  ВКонтакте</a
+                >
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/tiktok-icon.svg"
+                    alt="Иконка ТикТок"
+                  />
+                  TikTok</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
       </footer>
     </div>
